force-app/main/default/objects/Tax__c/fields/X12_Tax_Bracket__c.field-meta.xml
<CustomField>
    <fullName>X12_Tax_Bracket__c</fullName>
    <label>12% Tax Bracket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>