force-app/main/default/objects/Tax__c/fields/X22_Tax_Bracket__c.field-meta.xml
<CustomField>
    <fullName>X22_Tax_Bracket__c</fullName>
    <label>22% Tax Bracket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>